# dmenu-rs

./: .editorconfig  .gitattributes  .gitignore  .prototools  Cargo.toml  README.md  config.mk  cspell.config.yaml  makefile  taskfile.yaml
.config/: cspell-dmenu.txt
.cspell/: custom-dictionary.txt
src/: Cargo.toml  README.md
src/config/src/: checkdeps.sh  config.rs  util.rs
src/dmenu/: README.md
src/headers/: Cargo.toml  build.rs
src/man/: Cargo.toml
src/plugins/: README.md
src/sh/: README.md
src/stest/: README.md
src/stest/src/: config.rs  file.rs
src/stest/tests/: set-up-block-special-file  set-up-character-special-file  set-up-directory  set-up-directory-with-contents  set-up-executable-file  set-up-file  set-up-file-with-set-group-id  set-up-file-with-set-user-id  set-up-hidden-file  set-up-nonempty-file  set-up-nonexisting-file  set-up-pipe-file  set-up-readable-file  set-up-symbolic-link  set-up-writable-file
